k8s/api-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      imagePullSecrets:
        - name: do-registry
      containers:
        - name: api-gateway
          image: registry.digitalocean.com/hive-services-registry/api-gateway:latest
          ports:
            - containerPort: 3001
