k8s/service-llm-hives-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-llm-hives
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-llm-hives
  template:
    metadata:
      labels:
        app: service-llm-hives
    spec:
      imagePullSecrets:
        - name: do-registry
      containers:
        - name: service-llm-hives
          image: registry.digitalocean.com/hive-services-registry/service-llm-hives:latest
          ports:
            - containerPort: 3003
