k8s/service-user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-user
  template:
    metadata:
      labels:
        app: service-user
    spec:
      imagePullSecrets:
        - name: do-registry
      containers:
        - name: service-user
          image: registry.digitalocean.com/hive-services-registry/service-user:REPLACE_WITH_SHA
          ports:
            - containerPort: 3002
