k8s/api-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: 'true'
spec:
  type: LoadBalancer
  selector:
    app: api-gateway
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3001
    - name: https
      protocol: TCP
      port: 443
      targetPort: 3001
