k8s/service-llm-hives.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-llm-hives
spec:
  type: ClusterIP
  selector:
    app: service-llm-hives
  ports:
    - protocol: TCP
      port: 3003
      targetPort: 3003
