k8s/service-llm-responses.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-llm-responses
spec:
  type: ClusterIP
  selector:
    app: service-llm-responses
  ports:
    - protocol: TCP
      port: 3004
      targetPort: 3004
