k8s/service-user.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-user
spec:
  type: LoadBalancer
  selector:
    app: service-user
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
